Bug 319501 - Searching in Pubmed return no items or the result is not the expected
Summary: Searching in Pubmed return no items or the result is not the expected
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-08 04:34 UTC by Elizabeth
Modified: 2013-06-08 18:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elizabeth 2013-05-08 04:34:29 UTC
I noticed that searching in Pubmed return no items or the result is not the expected. I have been used tellico since 1 year without any problem but about 2 months ago the search in pubmed don't find my requests. 

Reproducible: Always

Steps to Reproduce:
1.internet search
2. "Stem cell competition: finding balance in the niche"  in Search box and "Title". Any search (Title, Person Keyword, doi, pubmed id,) in PUBMED has failures. 
3. "Entrez Database" in search source
4. Search button 
Actual Results:  
"The  search return no items"
Comment 1 michael.zugaro 2013-06-04 14:15:43 UTC
I am experiencing a similar problem. Most queries for references published in 2013 fail (queries for older references seem to work, however).

Example:

1. Internet search
2. dragoi[au] tonegawa[au] 2013[dp]
3. "Entrez Database" in search source
4. Search button 

The same search on PubMed does retrieve the appropriate reference.

I hope this is not too difficult to fix. Thank you for tellico!
Comment 2 Robby Stephenson 2013-06-08 18:36:35 UTC
Git commit dd14c84415f5384cff12a4bd6d4809742b39d7c7 by Robby Stephenson.
Committed on 08/06/2013 at 20:34.
Pushed by rstephenson into branch '2.3'.

Fix the Entrez/Pubmed fetcher to grab all results

Apparently, adding the retstart parameter to the summary url causes
some searches to fail to return results. Change the request to only
use retstart when continuing a search (when retstart > 1).

Add unit test for Pubmed results, as well.
FIXED-IN: 2.3.8

M  +4    -0    ChangeLog
M  +3    -1    src/fetch/entrezfetcher.cpp
M  +3    -0    src/tests/CMakeLists.txt
A  +149  -0    src/tests/entrezfetchertest.cpp     [License: GPL (v2/3)]
A  +49   -0    src/tests/entrezfetchertest.h     [License: GPL (v2/3)]
M  +3    -0    src/tests/tellicotest.config

http://commits.kde.org/tellico/dd14c84415f5384cff12a4bd6d4809742b39d7c7