Fix the Entrez/Pubmed fetcher to grab all results

Apparently, adding the retstart parameter to the summary url causes
some searches to fail to return results. Change the request to only
use retstart when continuing a search (when retstart > 1).

Add unit test for Pubmed results, as well.

BUG: 319501
FIXED-IN: 2.3.8